--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <p id="paragraph">cool</p>
     <script src="main.js"></script>
 </body>
 </html>
