--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <p id="paragraph">cool</p>
+    <button onclick="player.move(up)" id="up" class="movement-button">^</button>
+    <button id="down" class="movement-button">\/</button>
+    <button id="left" class="movement-button"><</button>
+    <button id="right" class="movement-button">></button>
     <script src="main.js"></script>
 </body>
 </html>
